Fix main filter buttons height on mobile when one of them has more height

--- a/src/components/FilterItem/FilterItem.module.scss
+++ b/src/components/FilterItem/FilterItem.module.scss
@@ -54,8 +54,13 @@
 }
 
 @media (max-width: 920px) {
+    .filterItem {
+        height: 100%;
+    }
+
     .filterItemButton {
         width: 100%;
+        height: 100%;
         padding: 5px;
     }
 
